--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <html>
 <head>
-<title>Page Title</title>
+<title>3r4  Class</title>
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>List of Student</h1>
+<p> <ol> 1. Allen Dave Mabolo
+	2. Eunice Marie Morondoz
+</ol></p>
 
 </body>
 </html>
